--- a/css/styles.css
+++ b/css/styles.css
@@ -196,10 +196,6 @@ button {
     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.current {
-    color: #404bbf;
-}
-
 .current::after {
     content: "";
     position: absolute;
@@ -289,6 +285,152 @@ button {
     letter-spacing: 0.02em;
     color: #404bbf;
 }
+
+/* mobile menu */
+
+.mobile-menu-container {
+    position: fixed;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background-color: #fcfcfc;
+        z-index: 9999;
+        visibility: hidden;
+        opacity: 0;
+        pointer-events: none;
+        transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+        transition-property: visibility, opacity;
+}
+
+.mobile-menu-container.is-open {
+    visibility: visible;
+    opacity: 1;
+    pointer-events: auto;
+}
+
+.mobile-menu {}
+
+.btn-close-mob-menu {
+    position: absolute;
+        top: 24px;
+        right: 24px;
+        width: 24px;
+        height: 24px;
+        border-radius: 50%;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        background-color: white;
+        border: 1px solid rgba(0, 0, 0, 0.1);
+        padding: 0;
+        cursor: pointer;
+        transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.btn-close-mob-menu:hover, .btn-close-mob-menu:focus {
+    background-color: #404bbf;
+    fill: white;
+}
+
+.mob-menu-close-icon{
+    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+
+
+.mobile-nav {}
+
+.mobile-nav-list {
+    display: flex;
+    flex-direction: column;
+    gap: 40px;
+    position: absolute;
+    top: 72px;
+    left: 16px;
+}
+
+.mobile-nav-item {}
+
+.mobile-nav-link {
+    font-weight: 700;
+    font-size: 36px;
+    line-height: 1.11111;
+    letter-spacing: 0.02em;
+    color: #2e2f42;
+}
+
+.mobile-menu-address {}
+
+.mobile-addr-list {
+    display: flex;
+    flex-direction: column;
+    gap: 24px;
+    position: absolute;
+    bottom: 128px;
+    left: 16px;
+}
+
+.monile-addr-item {}
+
+.mobile-addr-link {
+    font-weight: 500;
+    font-size: 20px;
+    line-height: 1.2;
+    letter-spacing: 0.02em;
+    color: #434455;
+}
+
+.mobile-social-media-list {}
+
+.mobile-social-media-item {}
+
+
+
+.mobile-social-media-container {
+    display: flex;
+    justify-content: space-between;
+    width: 280px;
+    height: auto;
+    position: absolute;
+    bottom: 40px;
+    left: 16px;
+    right: 24px;
+}
+
+.mobile-social-media-list {
+    display: flex;
+        gap: 40px;
+        padding: 0;
+        margin: 0;
+        list-style: none;
+}
+
+.mobile-social-media-item {
+    width: 40px;
+    height: 40px;
+}
+
+.mobile-social-media-link {
+    display: flex;
+        align-items: center;
+        justify-content: center;
+        width: 100%;
+        height: 100%;
+        background-color: #4d5ae5;
+        color: #f4f4fd;
+        border-radius: 50%;
+        transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.mobile-social-media-icon {
+    fill: var(--icon-color, #f4f4fd);
+    width: 40px;
+    height: 40px;
+}
+
+
+
 
 /* hero */
 .hero-section {
@@ -1190,6 +1332,23 @@ button {
     transition-property: visibility, opacity;
 }
 
+@media (min-width: 1158px) {
+    .backdrop {
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background-color: rgba(46, 47, 66, 0.4);
+        z-index: 9999;
+        visibility: hidden;
+        opacity: 0;
+        pointer-events: none;
+        transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+        transition-property: visibility, opacity;
+    }
+}
+
 .backdrop.is-open {
     visibility: visible;
     opacity: 1;
@@ -1201,13 +1360,45 @@ button {
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    width: 408px;
-    min-height: 584px;
+    width: 288px;
+    min-height: 623px;
     background: #fcfcfc;
     box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 2px 1px rgba(0, 0, 0, 0.2);
     border-radius: 4px;
     transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
-    padding: 72px 24px 24px 24px;
+    padding: 72px 16px 24px 16px;
+}
+
+@media (min-width: 768px) {
+    .modal {
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        width: 408px;
+        min-height: 584px;
+        background: #fcfcfc;
+        box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 2px 1px rgba(0, 0, 0, 0.2);
+        border-radius: 4px;
+        transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+        padding: 72px 24px 24px 24px;
+    }
+}
+
+@media (min-width: 1158px) {
+    .modal {
+        position: absolute;
+         top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        width: 408px;
+        min-height: 584px;
+        background: #fcfcfc;
+        box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 2px 1px rgba(0, 0, 0, 0.2);
+        border-radius: 4px;
+        transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+        padding: 72px 24px 24px 24px;
+    }
 }
 
 .modal-button-close {
@@ -1393,4 +1584,12 @@ button {
 .submit-btn:hover,
 .submit-btn:focus {
     background-color: #404BBF;
+}
+
+.current {
+    color: #404bbf;
+}
+
+.blue {
+    color: #4d5ae5;
 }
