--- a/css/styles.css
+++ b/css/styles.css
@@ -77,17 +77,12 @@ button {
 .container-nav {
     display: flex;
     align-items: center;
-    justify-content: space-evenly;
-    width: 100%;
-    max-width: 767px;
-    padding: 0 16px;
+    justify-content: space-between;
 }
 
 @media (min-width: 768px) {
     .container-nav {
-        max-width: 768px;
-        width: 100%;
-        height: 72px;
+        display: flex;
         align-items: center;
         justify-content: space-between;
     }
@@ -95,12 +90,9 @@ button {
 
 @media (min-width: 1158px) {
     .container-nav {
-        max-width: 1158px;
-        width: 100%;
-        height: 72px;
-        padding: 0 15px;
+        display: flex;
         align-items: center;
-        justify-content: none;
+        justify-content: space-between;
     }
 }
 
@@ -108,19 +100,18 @@ button {
     display: flex;
     align-items: center;
     justify-content: space-between;
-    width: 100%;
-    min-height: 58px;
 }
 
 @media (min-width: 768px) {
     .header-nav {
-        min-width: 768px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
     }
 }
 
 @media (min-width: 1158px) {
     .header-nav {
-        min-width: 1158px;
     }
 }
 
@@ -173,7 +164,6 @@ button {
 
 @media (min-width: 768px) {
     .class-menu {
-        min-width: 768px;
         display: flex;
         gap: 40px;
         align-items: center;
@@ -225,7 +215,6 @@ button {
 
 @media (min-width: 768px) {
     .header-contacts {
-        min-width: 768px;
         display: flex;
         font-style: normal;
         align-items: center;
@@ -234,7 +223,6 @@ button {
 
 @media (min-width: 1158px) {
     .header-contacts {
-        max-width: 1158px;
         display: flex;
         font-style: normal;
         align-items: center;
@@ -470,6 +458,8 @@ button {
         margin: auto;
     }
 }
+
+@mi
 
 @media (min-width: 1158px) {
     .hero-section {
