--- a/css/styles.css
+++ b/css/styles.css
@@ -74,11 +74,7 @@ button {
         0px 1px 6px rgba(46, 47, 66, 0.08);
 }
 
-.container-nav {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-}
+.container-nav {}
 
 @media (min-width: 768px) {
     .container-nav {
@@ -435,12 +431,18 @@ button {
     align-items: center;
     text-align: center;
     padding: 72px 0;
-    background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url(../images/bg.jpg);
+    background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url(../images/mobile/Dark-bg-1x.jpg);
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
     min-width: 320px;
     margin: auto;
+}
+
+@media (min-resolution: 2x) {
+    .hero-section {
+        background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url(../images/mobile/Dark-bg-2x.jpg);
+    }
 }
 
 @media (min-width: 768px) {
@@ -450,7 +452,7 @@ button {
         align-items: center;
         text-align: center;
         padding: 72px 0;
-        background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url(../images/bg.jpg);
+        background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url(../images/tablet/Dark-bg-1x.jpg);
         background-repeat: no-repeat;
         background-size: cover;
         background-position: center;
@@ -459,7 +461,11 @@ button {
     }
 }
 
-@mi
+@media (min-width: 768px) and (min-resolution: 2x) {
+    .hero-section {
+        background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url(../images/tablet/Dark-bg-2x.jpg)
+    }
+}
 
 @media (min-width: 1158px) {
     .hero-section {
@@ -468,12 +474,18 @@ button {
         align-items: center;
         text-align: center;
         padding: 188px 0;
-        background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url(../images/bg.jpg);
+        background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url(../images/desktop/people-office-1x.jpg);
         background-repeat: no-repeat;
         background-size: cover;
         background-position: center;
         max-width: 1440px;
         margin: auto;
+    }
+}
+
+@media (min-width: 1158px) and (min-resolution: 2x) {
+    .hero-section{
+        background-image: url(../images/desktop/people-office2x.jpg)
     }
 }
 
