--- a/css/styles.css
+++ b/css/styles.css
@@ -24,6 +24,8 @@ a {
 
 img {
     display: block;
+    max-width: 100%;
+    height: auto;
 }
 
 ul,
@@ -96,6 +98,7 @@ button {
     display: flex;
     align-items: center;
     justify-content: space-between;
+    padding: 16px 0;
 }
 
 @media (min-width: 768px) {
@@ -103,6 +106,7 @@ button {
         display: flex;
         justify-content: center;
         align-items: center;
+        padding: 0;
     }
 }
 
@@ -253,12 +257,24 @@ button {
 
 .header-contacts-link {
     font-weight: 400;
-    font-size: 16px;
+    font-size: 12px;
     line-height: 1.5;
     letter-spacing: 0.02em;
     color: #434455;
     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
+}
+
+@media (min-width: 1158px) {
+    .header-contacts-link {
+        font-weight: 400;
+        font-size: 16px;
+        line-height: 1.5;
+        letter-spacing: 0.02em;
+        color: #434455;
+        transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    
+    }
 }
 
 .header-contacts-link:hover,
@@ -371,6 +387,7 @@ button {
     line-height: 1.2;
     letter-spacing: 0.02em;
     color: #434455;
+    font-style: normal;
 }
 
 .mobile-social-media-list {}
@@ -485,7 +502,7 @@ button {
 
 @media (min-width: 1158px) and (min-resolution: 2x) {
     .hero-section{
-        background-image: url(../images/desktop/people-office2x.jpg)
+        background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url(../images/desktop/people-office2x.jpg)
     }
 }
 
@@ -514,6 +531,7 @@ button {
         letter-spacing: 0.02em;
         text-align: center;
         color: #fff;
+        max-width: 496px;
     }
 }
 
@@ -628,8 +646,6 @@ button {
 .features-item {
     flex-direction: column;
     align-items: flex-start;
-    flex-basis: calc((100% - 24px) / 3);
-    min-width: 264px;
 }
 
 @media (min-width: 768px) {
@@ -684,6 +700,20 @@ button {
     text-transform: capitalize;
     max-width: 500px;
     margin-bottom: 8px;
+}
+
+@media (min-width: 768px) {
+    .features-title {
+        font-weight: 500;
+        font-size: 20px;
+        line-height: 1.2;
+        letter-spacing: 0.02em;
+        text-align: start;
+        color: #2e2f42;
+        text-transform: capitalize;
+        max-width: 500px;
+        margin-bottom: 8px;
+    }
 }
 
 @media (min-width: 1158px) {
@@ -1071,11 +1101,8 @@ button {
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
     margin: 0 auto;
     padding: 0 16px;
-    min-width: 320px;
-
 }
 
 @media (min-width: 768px) {
@@ -1084,9 +1111,9 @@ button {
         flex-direction: row;
         flex-wrap: wrap;
         align-items: baseline;
-        max-width: 1200px;
         margin: 0 auto;
         padding: 0 15px;
+        width: 584px;
     }
 }
 
@@ -1099,6 +1126,7 @@ button {
         max-width: 1200px;
         margin: 0 auto;
         padding: 0 15px;
+        width: 1158px;
     }
 }
 
@@ -1113,6 +1141,7 @@ button {
     .footer-content {
         max-width: 264px;
         margin-right: 24px;
+        text-align: start;
     }
 }
 
@@ -1176,7 +1205,13 @@ button {
     letter-spacing: 0.02em;
     color: #ffffff;
     margin-bottom: 16px;
+    text-align: center;
+}
 
+@media (min-width: 768px) {
+    .footer-social-title {
+        text-align: start;
+    }
 }
 
 .footer-social-list {
@@ -1219,7 +1254,6 @@ button {
 
 .footer-subscribe-container {
     margin-left: 0;
-    width: 288px;
     height: 100%;
     background-color: #2e2f42;
 }
@@ -1227,7 +1261,6 @@ button {
 @media (min-width: 768px) {
     .footer-subscribe-container {
         margin-left: 0;
-        width: 453px;
         height: 100%;
         background-color: #2e2f42;
         margin-top: 72px;
@@ -1237,7 +1270,6 @@ button {
 @media (min-width: 1158px) {
     .footer-subscribe-container {
         margin-left: 80px;
-        width: 453px;
         height: 100%;
         background-color: #2e2f42;
     }
@@ -1250,6 +1282,13 @@ button {
     letter-spacing: 0.02em;
     color: #fff;
     margin-bottom: 16px;
+    text-align: center;
+}
+
+@media (min-width: 768px) {
+    .footer-subscribe-text {
+        text-align: start;
+    }
 }
 
 .footer-subscribe-form {
